--- a/projectmini/css/popup.css
+++ b/projectmini/css/popup.css
@@ -40,15 +40,27 @@
     color: #333;
 }
 .popup .close:hover {
-    color: #06D85F;
+    color: red;
 }
 .popup .content {
-    max-height: 30%;
+    max-height: auto;
     overflow: auto;
     padding: 1rem;
 }
 
-.popup .footer {
+.popup .content::-webkit-scrollbar {
+    width: 5px;
+}
+
+.popup .content::-webkit-scrollbar-track {
+    background-color: blanchedalmond;
+}
+
+.popup .content::-webkit-scrollbar-thumb {
+    background-color: rgb(71, 71, 71);
+}
+
+.popup .footer-popup {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
